# CriminalHeatmap

./: .gitignore  .gitmodules
backend/: Cargo.toml
backend/address_2_coord/: Cargo.toml
backend/address_2_coord/src/: main.rs
backend/clustering/: Cargo.toml
backend/clustering/src/: main.rs
backend/src/: main.rs
data/: .~lock.data1617.csv#  out.csv  out_x00.csv  out_x01.csv  out_x02.csv  out_x03.csv  x00  x01  x02  x03  x04  x05  x06  x07  x08  x09  x10  x11  x12  x13  x14  x15
frontend/: cluster.json  geo.json  heatmap.js  index.html  kde.csv  script.js  style.css
libs/clustering/: Cargo.toml
libs/kernel/: Cargo.toml
libs/kernel/src/: lib.rs
libs/record/: Cargo.toml
libs/record/src/: lib.rs
